--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # rxdart https://github.com/ReactiveX/rxdart
   rxdart: ^0.22.0
 
+  # local_auth https://github.com/flutter/plugins/tree/master/packages/local_auth
+  local_auth: ^0.4.0+1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
