--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,16 +24,16 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: 0.1.2
+  cupertino_icons: ^0.1.2
 
   # rxdart https://github.com/ReactiveX/rxdart
-  rxdart: 0.22.0
+  rxdart: ^0.22.0
 
   # local_auth https://github.com/flutter/plugins/tree/master/packages/local_auth
-  local_auth: 0.4.0+1
+  local_auth: ^0.4.0+1
 
   # sqflite https://github.com/tekartik/sqflite
-  sqflite: 1.1.6
+  sqflite: ^1.1.6+2
 
 dev_dependencies:
   flutter_test:
