--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -27,22 +27,25 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   # rxdart https://github.com/ReactiveX/rxdart
-  rxdart: ^0.22.0
+  rxdart: ^0.23.1
 
   # local_auth https://github.com/flutter/plugins/tree/master/packages/local_auth
-  local_auth: ^0.4.0+1
+  local_auth: ^0.6.1
 
   # sqflite https://github.com/tekartik/sqflite
-  sqflite: ^1.1.6+2
+  sqflite: ^1.2.0
 
   # shared_preferences https://github.com/flutter/plugins/tree/master/packages/shared_preferences
-  shared_preferences: ^0.5.3+4
+  shared_preferences: ^0.5.6
 
   # crypto https://pub.flutter-io.cn/packages/crypto
   # crypto: ^2.0.6
 
   # cipher2 https://pub.dev/packages/cipher2
   cipher2: ^0.3.5
+
+  # csv https://github.com/close2/csv
+  csv: ^4.0.3
 
 dev_dependencies:
   flutter_test:
